// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Optionals > Properly generates documentation for modules which contain optionals > # Of Files Generated 1`] = `6`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: optionals-module
    items:
    - name: optionals-module
      href: optionals-module/optionals-module.md
    - name: ClassWithOptionals
      href: optionals-module/ClassWithOptionals.md
    - name: InterfaceWithDefaultProperty
      href: optionals-module/InterfaceWithDefaultProperty.md
    - name: InterfaceWithOptionalProperty
      href: optionals-module/InterfaceWithOptionalProperty.md
"
`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > msdocs/scriptapi/optionals-module/ClassWithOptionals.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: optionals-module.ClassWithOptionals Class
description: Contents of the optionals-module.ClassWithOptionals class.
---
# ClassWithOptionals Class

## Properties

### **optionalProperty**
\`optionalProperty?: boolean;\`

Type: *boolean*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [methodThatReturnsOptional](#methodthatreturnsoptional)
- [methodThatTakesOptionals](#methodthattakesoptionals)
- [methodWithDefaultValuesAreOptional](#methodwithdefaultvaluesareoptional)

### **methodThatReturnsOptional**
\`
methodThatReturnsOptional(): boolean | undefined
\`

**Returns** *boolean* | *undefined*
  
Notes:
- This function can't be called in read-only mode.

### **methodThatTakesOptionals**
\`
methodThatTakesOptionals(arg1?: boolean, arg2?: string): void
\`

#### **Parameters**
- **arg1**?: *boolean*
- **arg2**?: *string*

**Returns** *void*
  
Notes:
- This function can't be called in read-only mode.

### **methodWithDefaultValuesAreOptional**
\`
methodWithDefaultValuesAreOptional(defaultIs1?: number, defaultIs0?: number, defaultIsFalse?: boolean, defaultIsString?: string, defaultIsArray?: number[]): void
\`

#### **Parameters**
- **defaultIs1**?: *number* = \`1\`
- **defaultIs0**?: *number* = \`0\`
- **defaultIsFalse**?: *boolean* = \`false\`
- **defaultIsString**?: *string* = \`"String"\`
- **defaultIsArray**?: *number*[] = \`[1, 2, 3]\`

**Returns** *void*
  
Notes:
- This function can't be called in read-only mode.
"
`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > msdocs/scriptapi/optionals-module/InterfaceWithDefaultProperty.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: optionals-module.InterfaceWithDefaultProperty Interface
description: Contents of the optionals-module.InterfaceWithDefaultProperty class.
---
# InterfaceWithDefaultProperty Interface

## Properties

### **defaultProperty**
\`defaultProperty?: string;\`

Type: *string*

Notes:
  - This property defaults to \`String\` when undefined.
"
`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > msdocs/scriptapi/optionals-module/InterfaceWithOptionalProperty.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: optionals-module.InterfaceWithOptionalProperty Interface
description: Contents of the optionals-module.InterfaceWithOptionalProperty class.
---
# InterfaceWithOptionalProperty Interface

## Properties

### **optionalProperty**
\`optionalProperty?: boolean;\`

Type: *boolean*
"
`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > msdocs/scriptapi/optionals-module/optionals-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: optionals-module Module
description: Contents of the optionals-module module
---
# \`optionals-module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "optionals-module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ClassWithOptionals](ClassWithOptionals.md)

## Interfaces
- [InterfaceWithDefaultProperty](InterfaceWithDefaultProperty.md)
- [InterfaceWithOptionalProperty](InterfaceWithOptionalProperty.md)
"
`;

exports[`Optionals > Properly generates documentation for modules which contain optionals > typescript/optionals-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "optionals-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithOptionals {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    optionalProperty?: boolean;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    methodThatReturnsOptional(): boolean | undefined;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     */
    methodThatTakesOptionals(arg1?: boolean, arg2?: string): void;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     * @param defaultIs1
     * Defaults to: 1
     * @param defaultIs0
     * Defaults to: 0
     * @param defaultIsFalse
     * Defaults to: false
     * @param defaultIsString
     * Defaults to: "String"
     * @param defaultIsArray
     * Defaults to: [1, 2, 3]
     */
    methodWithDefaultValuesAreOptional(
        defaultIs1?: number,
        defaultIs0?: number,
        defaultIsFalse?: boolean,
        defaultIsString?: string,
        defaultIsArray?: number[]
    ): void;
}

export interface InterfaceWithDefaultProperty {
    /**
     * Defaults to: String
     *
     */
    defaultProperty?: string;
}

export interface InterfaceWithOptionalProperty {
    optionalProperty?: boolean;
}
"
`;
